# leos-landing-page

./: .env.example  .gitignore  01_TASK_SPEC.md  02_DECISION_LOGS.md  03_LOGS.md  CLAUDE.md  GEMINI.md  README.md  asset-index.json  next.config.ts  package-lock.json  package.json  slicing-profile.json  tsconfig.json
.agents/rules/: Agent-Rules.md  ls-rule-contract-imports.md  ls-rule-conventional-commits.md  ls-rule-gate-acceptance.md  ls-rule-handover-guide-for-hands.md  ls-rule-secret-management.md
.agents/templates/: 01_TASK_SPEC_TEMPLATE.md  ACTIVE_HANDS_TEMPLATE.json  BRANCH_PROTECTION_CHECKLIST.md  Development_Contract.md  Development_Work_Appendix.md  Freelancers_Info.md  GATE_SCORECARD_TEMPLATE.md  GEMINI_BRAIN_TEMPLATE.md  GEMINI_SATELLITE_TEMPLATE.md  HARDENING_PROPOSAL_TEMPLATE.md  SLICING_PROFILE_TEMPLATE.json  link-strategy-hands.yml  session-snapshot-template.md
.agents/templates/python/: .gitignore  Dockerfile  SLICING_PROFILE_TEMPLATE.json  pyproject.toml  pyrightconfig.json
.agents/templates/python/src/: __init__.py
.agents/templates/python/test/: test_contract_guardrails.py
.agents/tools/: README.md  taxonomy_registry_seed.md
.agents/workflows/: 01-idea-discovery.md  02-strategic-briefing.md  03-production-master.md  04-channel-distribution.md  (+3 more)
.cache/: LandingAgent-For-Media.pagination.json  LandingAgent-For-Media.pagination.md
.github/: CODEOWNERS
public/: site.webmanifest  sw.js
scripts/: leos-ops.cjs  migrate-assets-to-articles.mjs  seed-letron-articles.mjs
test/: blog-utils.test.js  blog-validation.test.js  seo.test.js
(+355 files in other folders)
